implementação de solução completa do teste Iniflex com regras de negócio, organização em camadas e testes unitários